src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AO4_Count__c</fullName>
        <description>In order to count the # of AO4s for the Center Dashboard reports, Preliminary Treatment Plan must be evaluated. Multi-select picklists must be evaluated one possible value at time, hence the nested IF statements.</description>
        <formula>/*Old version of the formula - changed on 3/7/2013 by CM*/
/*IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Upper&quot;),
     IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Lower&quot;), 2, 
           IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Lower&quot;), 2, 
           1)),
IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Upper&quot;),
     IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Lower&quot;), 2, 
           IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Lower&quot;), 2, 
           1)), 
IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Lower&quot;),
     IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Upper&quot;), 2, 
           IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Upper&quot;), 2, 
           1)),
IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Lower&quot;),
     IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Upper&quot;), 2, 
           IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Upper&quot;), 2, 
           1)),
IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;DBL AO4&quot;), 
     2, 
           IF(INCLUDES( Preliminary_Treatment_Plan__c , &quot;DBL AO4 Edentulous&quot;), 
           2, 
     0
     )
    )
   )
  )
 )
)*/
/*new version of the formula - it&apos;s easier to manage and I can drive validation rules off this one to catch when people enter too many treatment options (CM 3/7/2013)*/
0 + if(includes(Preliminary_Treatment_Plan__c, &quot;AO4 Upper&quot;),1,0) 
+ if(includes(Preliminary_Treatment_Plan__c, &quot;AO4 Lower&quot;),1,0) 
+ if(includes(Preliminary_Treatment_Plan__c, &quot;AO4 Edentulous Upper&quot;),1,0) 
+ if(includes(Preliminary_Treatment_Plan__c, &quot;AO4 Edentulous Lower&quot;),1,0) 

+ if(includes(Preliminary_Treatment_Plan__c, &quot;DBL AO4 Edentulous&quot;),2,0) 
+ if(includes(Preliminary_Treatment_Plan__c, &quot;Transitional DBL AO4&quot;),2,if(includes(Preliminary_Treatment_Plan__c, &quot;DBL AO4&quot;),2,0)) 
+ if(includes(Preliminary_Treatment_Plan__c, &quot;Phased Barless Interim Upper AO4&quot;),1,0) 
+ if(includes(Preliminary_Treatment_Plan__c, &quot;Phased Barless Interim Lower AO4&quot;),1,0) 
+ if(includes(Preliminary_Treatment_Plan__c, &quot;Phased Barless Interim Double AO4&quot;),2,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AO4 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AO_4_Amount__c</fullName>
        <description>Displays the Negotiated Total Amount of treatments involving AO-4 procedures, for Center Sales Dashboard comparison.</description>
        <formula>IF(  OR(INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Upper&quot;),
             INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Lower&quot;),
             INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Upper&quot;),
             INCLUDES( Preliminary_Treatment_Plan__c , &quot;AO4 Edentulous Lower&quot;),
             INCLUDES( Preliminary_Treatment_Plan__c , &quot;DBL AO4&quot;),
             INCLUDES( Preliminary_Treatment_Plan__c , &quot;DBL AO4 Edentulous&quot;)
            ), 
       Negotiated_Total_Amount__c, 
       0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AO-4 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Treatment_Amount__c</fullName>
        <label>Prostho Exam Adjustment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Collected_Before_Final_Bridge__c</fullName>
        <label>Amount Collected Before Final Bridge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Collected_Before_Surgery__c</fullName>
        <label>Amount Collected Before Surgery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Collected_at_Consult__c</fullName>
        <label>Amount Collected at Consult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Collected_at_Prostho_Exam__c</fullName>
        <label>Amount Collected at Prostho Exam</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due_Before_Final_Bridge__c</fullName>
        <label>Amount Due Before Final Bridge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Due_Before_Surgery__c</fullName>
        <label>Amount Due Before Surgery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Payments__c</fullName>
        <label>Anticipated Payments</label>
        <summarizedField>CCPayment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CCPayment__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Anticipated, Anticipated Promise Note,HCF In Process, Anticipated PPF</value>
        </summaryFilterItems>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>At_Risk_Reason__c</fullName>
        <label>At Risk Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>At Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Follow_Up_Date__c</fullName>
        <description>This is a key field for the audit team to follow up on records in the future.</description>
        <label>Audit Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <description>This is an available field for the data team to use while auditing starts.</description>
        <label>Audit Notes</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audit_Status__c</fullName>
        <label>Audit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager Follow Up Requested</fullName>
                </value>
                <value>
                    <fullName>Audit Passed</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Issue Corrected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <formula>Negotiated_Total_Amount__c  -  Total_Collected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CDate__c</fullName>
        <description>The date representation of the records created date</description>
        <formula>DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Back__c</fullName>
        <formula>if(DATEvalue(Account.CreatedDate) == DATEvalue(CreatedDate) ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Reports</inlineHelpText>
        <label>Call Back</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancel_Date__c</fullName>
        <description>Field that tracks the time a start was actually cancelled.  The only way this resets,  is if a start goes to a noncancelled status,  and then gets reset back into a cancelled state later.  WIll be used for Dashboard reporting.</description>
        <label>Cancel Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Relocating</fullName>
                </value>
                <value>
                    <fullName>Death in the Family</fullName>
                </value>
                <value>
                    <fullName>Patient Died</fullName>
                </value>
                <value>
                    <fullName>Poor Patient Service</fullName>
                </value>
                <value>
                    <fullName>Health Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Doctor Declined Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Simple_Date__c</fullName>
        <description>The date representation of the canellation datetime</description>
        <formula>DATEVALUE( Cancel_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cancel Simple Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CareCredit_Dispute_Date__c</fullName>
        <label>CareCredit Dispute Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CareCredit_Dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CareCredit Dispute?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Check_CC__c</fullName>
        <label>Cash/Check/CC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Celigo_Sync_Helper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Sync Helper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Center_Sales_Region__c</fullName>
        <formula>text(  Account.Center__r.Sales_Region__c )</formula>
        <label>Center Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Code__c</fullName>
        <formula>Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check In Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_In_Username__c</fullName>
        <formula>IF(
NOT(ISBLANK(Short_Code__c)),
    Account.LastName,
    &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Check In Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Christmas_In_July__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Christmas In July</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Stage__c</fullName>
        <label>Completed Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Arrangements Made</fullName>
                </value>
                <value>
                    <fullName>Payment Expected This Month</fullName>
                </value>
                <value>
                    <fullName>Payment Expected Next Month</fullName>
                </value>
                <value>
                    <fullName>Payment Expected TBD</fullName>
                </value>
                <value>
                    <fullName>Multipile Payments</fullName>
                </value>
                <value>
                    <fullName>Financing Difficulty</fullName>
                </value>
                <value>
                    <fullName>Patient Non Responsive</fullName>
                </value>
                <value>
                    <fullName>Medical Clearance Pending</fullName>
                </value>
                <value>
                    <fullName>Not Moving Forward</fullName>
                </value>
                <value>
                    <fullName>Non Candidate</fullName>
                </value>
                <value>
                    <fullName>Doctor Declined Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Pre_Screen__c</fullName>
        <formula>CASE(Account.Pre_Screen__c, &quot;Green&quot;, 1, &quot;Yellow&quot;, 1, &quot;Not Checked&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Report Calculations</inlineHelpText>
        <label>Consult Pre Screen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <formula>Current_Prosth_Owner__r.FirstName + &apos; &apos; + Current_Prosth_Owner__r.LastName</formula>
        <label>Current Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Prosth_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The pec currently responsible for this start.</description>
        <label>Current Prosth Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Team_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Data team is forced to cancel a start, they will check this box. Accumulation of Data Team cancellations will reflect poor data hygiene on the PEC&apos;s hygiene scores.</description>
        <label>Data_Team_Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Amount_Due_or_Date_Payment_Made__c</fullName>
        <label>Date Amount Due or Date Payment Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Consult__c</fullName>
        <description>Calculates the number of days between the start date and the consult date</description>
        <formula>/*Modified by cm on 2015-01-08
  Now using prosth_exam_date_paid__c as the date a start is considered valid
DATEVALUE( CreatedDate ) - DATEVALUE( Account.CreatedDate )*/

if(isblank(Prosth_Exam_Paid_Date__c),today()   -  DATEVALUE( Account.CreatedDate ),Prosth_Exam_Paid_Date__c - DATEVALUE( Account.CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Consult</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_btwn_Prostho_Exam_Date_Creation__c</fullName>
        <formula>CloseDate - DATEVALUE( CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days btwn Prostho Exam Date &amp; Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursed_Adjustment__c</fullName>
        <label>Disbursed Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Finance_Amount__c</fullName>
        <label>Disbursed Finance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Earliest_Payment_Date__c</fullName>
        <label>Earliest Payment Date</label>
        <summarizedField>CCPayment__c.Payment_Date__c</summarizedField>
        <summaryFilterItems>
            <field>CCPayment__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Anticipated, Anticipated Promise Note, Collected, Collected Promise Note, Anticipated Payment Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Eligible_Date__c</fullName>
        <label>Eligible Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>For the Eloqua team</description>
        <formula>if(isblank( Account.PersonEmail),     Account.Email__c, Account.PersonEmail)</formula>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Center__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A field to store the center that the prosth exam will actually take place.  This is being added for Chicago right now,  but might apply elsewhere eventually</description>
        <label>Exam Center</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Opportunities (Exam Center)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exam_Center_formula__c</fullName>
        <formula>IF( AND
              (AO4_Count__c &gt; 0,
               NOT(ISBLANK( Account.Center__r.Prosth_Exam_Center_AO4__r.Name))
),
Account.Center__r.Prosth_Exam_Center_AO4__r.Name,
 Account.Center__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exam Center (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Bridge_Date__c</fullName>
        <label>Final Bridge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Referral_Track__c</fullName>
        <description>The final track selection used on a referral patient.  Will be required when creating a start record.  Selected by the doctor.</description>
        <label>Final Referral Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Track I</fullName>
                </value>
                <value>
                    <fullName>Track II</fullName>
                </value>
                <value>
                    <fullName>Track III</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Company_Fee__c</fullName>
        <inlineHelpText>Enter the fee imposed by the Finance Company.  This amount is the difference between the Amount the patient financed and what you actually received from the Finance Company.</inlineHelpText>
        <label>Finance Company Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Fee_Summary__c</fullName>
        <description>Finance Fee Summary - total of finance fees</description>
        <label>Finance Fee Summary</label>
        <summarizedField>CCPayment__c.Finance_Fee__c</summarizedField>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GP_Fee_1__c</fullName>
        <description>Fee to GP for Phase 1</description>
        <label>GP Fee 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Fee_2__c</fullName>
        <description>Fee to GP for Phase 2 (sum of service fee 2 and service fee 3)</description>
        <label>GP Fee 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Fee_Phase_1_Check_Number__c</fullName>
        <description>Form of payment - check number/ACH - for payment to referring doctor.</description>
        <label>GP Fee Phase 1 Check Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Fee_Phase_1_Payment_Date__c</fullName>
        <description>Date the referring is paid.</description>
        <label>GP Fee Phase 1 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Fee_Phase_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fee paid to referring doctors.</description>
        <label>GP Fee Phase 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Fee_Rate__c</fullName>
        <description>The GP rate for the final track at the time of the start</description>
        <label>GP Fee Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Fee_Total__c</fullName>
        <formula>If(Exam_Center_formula__c != &apos;Houston Woodlands&apos;, 
   (Total_Net_Payments__c - Refund_Payments__c) * if(ISNULL(GP_Fee_Rate__c), 0, GP_Fee_Rate__c) 
, 
   MIN( 
      (Total_Net_Payments__c - Refund_Payments__c) * if(ISNULL(GP_Fee_Rate__c), 0, GP_Fee_Rate__c), 
      4050 * if(AO4_Count__c &lt; 2, 1, 2) 
   ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Fee Total (old method)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Phase_1_Amount__c</fullName>
        <formula>IF(GP_Fee_Phase_1__c == true, 1500, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Phase 1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Referral_Payment_1_Check__c</fullName>
        <label>GP Referral Payment 1 Check#</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Referral_Payment_1_Date__c</fullName>
        <label>GP Referral Payment 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Referral_Payment_1__c</fullName>
        <description>First of two payments to referring doctor - generally paid after surgery date</description>
        <label>GP Fee 1 Paid</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Referral_Payment_2_Check__c</fullName>
        <label>GP Referral Payment 2 Check#</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Referral_Payment_2_Date__c</fullName>
        <label>GP Referral Payment 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Referral_Payment_2__c</fullName>
        <description>Second of two payments to referring doctor - generally paid after final delivery date</description>
        <label>GP Fee 2 Paid</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Service_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GP Service 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Service_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GP Service 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Service_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GP Service 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Sales_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HCF_Payments__c</fullName>
        <label>HCF Payments</label>
        <summarizedField>CCPayment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>CCPayment__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>HCF In Process</value>
        </summaryFilterItems>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Treatment_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the definition of is_Valid_Start - a workflow rule (in the Visual Process Builder) controls this. If a Treatment Plan related to the Opportunity has a Treatment Option selected, this checkbox will be set to true, and if that Treatment Option is set to null, this checkbox will be set to false.</description>
        <label>Has Treatment Option?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ignored_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Todd DeYoung announced amnesty for any cancellations on 5.4.15 and 5.515. This box removes a cancel from the True Close Rate definition, and can only be used by the data audit team.</description>
        <label>Ignored Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Prosth_Owner__c</fullName>
        <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
        <label>Initial Prosth Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Legacy_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Legacy Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Same_Day_Start__c</fullName>
        <formula>IF(ISNULL(Days_Since_Consult__c), FALSE, Days_Since_Consult__c = 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Same Day Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Traveling__c</fullName>
        <description>Looks to the &apos;Created by&apos; User record to identify PECs that travel to multiple Center Locations; returns &apos;True&apos; if User:Traveler Until date is &gt;= Today().  Added by Opfocus, Summer 2009, for Center Dashboard reporting.</description>
        <formula>IF( LastModifiedBy.Traveler_Until__c &gt;= Today() , 
     &quot;True&quot;, 
     &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Does the owner of this record travel, based on their User record?</inlineHelpText>
        <label>Is Traveling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Payment_Date__c</fullName>
        <label>Latest Payment Date</label>
        <summarizedField>CCPayment__c.Payment_Date__c</summarizedField>
        <summaryFilterItems>
            <field>CCPayment__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Anticipated, Anticipated Promise Note, Collected, Collected Promise Note, Anticipated Payment Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LeadLifeID__c</fullName>
        <label>LeadLifeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Agent__c</fullName>
        <description>Marketing agent sending out marketing email.</description>
        <label>Marketing Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jennifer Lewis</fullName>
                </value>
                <value>
                    <fullName>Janelle Gladstone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NS_run_item_group__c</fullName>
        <defaultValue>false</defaultValue>
        <description>how many item groups are present in the opportunity</description>
        <label>NS run item group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Negotiated_Total_Amount__c</fullName>
        <formula>Treatment_Amount__c + Additional_Treatment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Negotiated Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Mapping__c</fullName>
        <label>NetSuite Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NetSuite Quote</label>
        <referenceTo>NetSuite_Estimate__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NetSuite_Sync_Time__c</fullName>
        <label>NetSuite Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NetSuite_Warning__c</fullName>
        <label>NetSuite Warning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Time__c</fullName>
        <label>Net Promoter Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Total_Payments__c</fullName>
        <description>Sum of total payments minus refund payments</description>
        <formula>Total_Payments__c -  Refund_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Month_Surgery_Carryover__c</fullName>
        <description>If (surgery is next year)
      return the amount due before surgery minus the amount collected
else 
      If (surgery is later than this month) 
             return the amount due before surgery minus the amount collected
      else
             return 0</description>
        <formula>IF ( Surgery_Status__c = 1 , Amount_Due_Before_Surgery__c -  Amount_Collected_Before_Surgery__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Month Surgery Carryover</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_Payments__c</fullName>
        <description>Count of the # of Payments associated to a Prostho Exam, for Snapshot reporting</description>
        <inlineHelpText>How many payments are associated to this PE?</inlineHelpText>
        <label>Num of Payments</label>
        <summaryForeignKey>CCPayment__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outbound_Email_Marketing__c</fullName>
        <description>An email has been sent by marketing to follow up on patients who cancel or No show at Prostho appoint and do not schedule surgery.</description>
        <label>Marketing Outbound Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>